2014-10-27  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Convert/DocBook.pm (upper_case_style_commands): use
	a context of 'upper_case' to track situation where upper casing
	of text should be done instead of upper-casing already converted
	output.

2014-10-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_marker) Return value says 
	whether syntax was valid.
	<cross-references>: Demand that cross-reference marker is 
	followed by whitespace.
	(scan_node_contents): Call to scan_reference_marker updated.
	* info/nodes.h (INFO_MENU_REGEXP, INFO_MENU_ENTRY_REGEXP)
	(INFO_XREF_REGEXP, INFO_TAG_REGEXP): Removed.

2014-10-26  Karl Berry  <karl@gnu.org>

	* Texinfo/Convert/DocBook.pm (upper_case_style_commands),
	(_convert): uppercase @sc argument.  Suggestion from Arnold Robbins,
	11 Sep 2014 19:48:14.
	* TODO,
	* tests/layout/res_parser/formatting_docbook/formatting.xml:
	update accordingly.
	* Texinfo/Convert/HTML.pm: doc tweak.

	* tp/maintain/template.pod,
	* tp/maintain/regenerate_cmd_tests.sh,
	* tp/maintain/regenerate_docstr.sh,
	* tp/maintain/regenerate_file_lists.sh,
	* tp/tests/Makefile.am:
	belated copyright year update.

2014-10-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (filesys_read_info_file): Disable call to 
	convert_eols.
	* info/info-utils.c (printed_representation): Make '\r' bytes 
	followed by a '\n' invisible.
	* info/Makefile.am: t/cr-tag-table.sh removed from XFAIL_TESTS.
	
	* info/info-utils.c (forward_to_info_syntax): Check for syntax 
	case-insensitively.

	* info/indices.c (info_virtual_index): Pass arguments to 
	text_buffer_printf as intended.

2014-10-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (forward_to_info_syntax): New function.
	(scan_node_contents): Call it instead of using regexp_search.  
	This produces a speed improvement, noticable when using M-x 
	index-apropos or opening a long index node.
	* info/indices.c (info_indices_of_file_buffer): Call strstr 